--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,8 @@ body {
   color: #505050;
   font-family: "微软雅黑";
   text-shadow: rgba(50,50,50,0.3) 1px 1px 3px;
-  font-size: 17px;
-  line-height: 23px;
+  font-size: 14px;
+  line-height: 20px;
 }
 a {
   text-decoration: none;
@@ -31,7 +31,7 @@ a:hover {
   height: 45px;
   line-height: 45px;
   font-size: 18px;
-  padding-left: 20px;
+  padding-left: 12px;
 }
 #wrap {
   margin: 20px auto;
@@ -57,48 +57,44 @@ a:hover {
 #title h1 {
   margin-left: 10px;
   padding-top: 20px;
+  padding-bottom: 15px;
   font-size: 40px;
   letter-spacing: -0.15em;
 }
 #title h1 a {
   color: #505050;
 }
-#title h2 {
-  margin-top: 27px;
-  font-size: 18px;
-  padding-left: 40px;
+#title h3 {
   color: #a39c87;
+  padding-left: 40px;
   letter-spacing: -0.12em;
 }
 #nav ul {
   list-style: none;
 }
 #nav a {
-  width: 200px;
-  height: 45px;
-  line-height: 45px;
-  overflow: hidden;
-  padding-left: 20px;
-  display: block;
-  font-size: 18px;
-  color: #505050;
   font-weight: bold;
+  color: #505050;
+}
+#nav a:hover {
+  color: #d31414;
 }
 .pagetitle {
-  font-size: 42px;
-  height: 120px;
-  line-height: 120px;
+  font-weight: bold;
+  height: 85px;
+  padding-top: 35px;
   border-bottom: 1px solid #a39c87;
   margin-bottom: 20px;
 }
 .post {
-  padding-bottom: 20px;
+  padding-bottom: 5px;
+  border-bottom: 1px solid #d6d1bf;
+  margin-bottom: 25px;
 }
 .post:first-child {
-  padding-top: 20px;
+  padding-top: 15px;
 }
 .post .posttitle a {
-  font-size: 26px;
   margin-bottom: 3px;
 }
 .post .postmeta {
@@ -114,21 +110,20 @@ a:hover {
   float: left;
 }
 .post .tags:before {
-  content: "Tags: ";
+  content: "标签: ";
 }
 .post .date {
   float: right;
 }
 .post .footer {
-  margin-top: 20px;
+  margin-top: 15px;
   float: right;
 }
 #comment {
-  padding-top: 40px;
   padding-bottom: 10px;
 }
 #pagination {
-  margin-top: 35px;
+  margin-top: 40px;
   font-weight: bold;
   font-size: 15px;
   height: 30px;
@@ -149,11 +144,6 @@ a:hover {
 #sidebar ul {
   padding-left: 35px;
   list-style: none;
-}
-#sidebar ul li {
-  height: 26px;
-  line-height: 26px;
-  font-size: 16px;
 }
 #sidebar ul li small {
   margin-left: 15px;
